--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "    </script>\n",
        "    <style>\n",
        "        :root {\n",
-       "            --background-color: #f4f4f4;\n",
+       "            --background-color: #e6e6e6; /* Slightly less bright */\n",
        "            --text-color: #333;\n",
        "            --navbar-background-color: #333;\n",
        "            --navbar-text-color: #fff;\n",
@@ -42,6 +42,8 @@
        "            --container-background-color: #fff;\n",
        "            --link-color: #0000EE;\n",
        "            --border-color: #ddd;\n",
+       "            --dropdown-background-color: #f9f9f9;\n",
+       "            --dropdown-text-color: #333;\n",
        "        }\n",
        "        .dark-theme {\n",
        "            --background-color: #121212;\n",
@@ -53,6 +55,8 @@
        "            --container-background-color: #333;\n",
        "            --link-color: #BB86FC;\n",
        "            --border-color: #333;\n",
+       "            --dropdown-background-color: #2c2c2c;\n",
+       "            --dropdown-text-color: #ccc;\n",
        "        }\n",
        "        body {\n",
        "            font-family: Arial, sans-serif;\n",
@@ -68,7 +72,7 @@
        "        }\n",
        "        .wrapper {\n",
        "            width: 100%;\n",
-       "            max-width: 1200px; /* Adjust this value to match your design preference */\n",
+       "            max-width: 1200px;\n",
        "            margin: auto;\n",
        "            padding: 20px;\n",
        "        }\n",
@@ -77,14 +81,14 @@
        "            padding: 20px;\n",
        "            border-radius: 10px;\n",
        "            box-shadow: 0 4px 8px rgba(0,0,0,0.1);\n",
-       "            margin-bottom: 20px; /* Ensure some space between the sections */\n",
+       "            margin-bottom: 20px;\n",
        "        }\n",
        "        .navbar {\n",
        "            display: flex;\n",
        "            justify-content: space-between;\n",
        "            background-color: var(--navbar-background-color);\n",
        "            color: var(--navbar-text-color);\n",
-       "            padding: 10px 50px; /* Adjust padding as needed */\n",
+       "            padding: 10px 50px;\n",
        "        }\n",
        "        .navbar .logo i {\n",
        "            margin-right: 10px;\n",
@@ -168,24 +172,28 @@
        "        .dropdown-content {\n",
        "            display: none;\n",
        "            position: absolute;\n",
-       "            background-color: #f9f9f9;\n",
+       "            background-color: var(--dropdown-background-color);\n",
        "            min-width: 160px;\n",
        "            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);\n",
-       "            padding: 12px 16px;\n",
        "            z-index: 1;\n",
-       "        }\n",
-       "        .dropdown:hover .dropdown-content {\n",
-       "            display: block;\n",
+       "            border-radius: 5px;\n",
        "        }\n",
        "        .dropdown-content a {\n",
-       "            color: black;\n",
+       "            color: var(--dropdown-text-color);\n",
        "            padding: 12px 16px;\n",
        "            text-decoration: none;\n",
        "            display: block;\n",
+       "            border-bottom: 1px solid var(--border-color);\n",
        "        }\n",
-       "        .dropdown-content a:hover {background-color: #f1f1f1}\n",
-       "        .dropdown:hover .dropbtn {\n",
-       "            background-color: #3e8e41;\n",
+       "        .dropdown-content a:last-child {\n",
+       "            border-bottom: none;\n",
+       "        }\n",
+       "        .dropdown-content a:hover {\n",
+       "            background-color: var(--button-background-color);\n",
+       "            color: var(--button-text-color);\n",
+       "        }\n",
+       "        .dropdown:hover .dropdown-content {\n",
+       "            display: block;\n",
        "        }\n",
        "        /*End of dropdown*/\n",
        "        \n",
@@ -250,15 +258,15 @@
        "</head>\n",
        "<body class=\"light-theme\">\n",
        "<div class=\"wrapper\">\n",
-       "<div class=\"navbar\">\n",
-       "    <div class=\"logo\">\n",
-       "        <i class=\"fas fa-microchip\"></i>\n",
-       "        <span>Nvidia Search Engine</span>\n",
-       "    </div>\n",
-       "    <div class=\"nav-links\">\n",
+       "    <div class=\"navbar\">\n",
+       "        <div class=\"logo\">\n",
+       "            <i class=\"fas fa-microchip\"></i>\n",
+       "            <span>Nvidia Search Engine</span>\n",
+       "        </div>\n",
+       "        <div class=\"nav-links\">\n",
        "            <a href=\"#\" onclick=\"switchPage('searchPage')\">Search</a>\n",
        "            <div class=\"dropdown\">\n",
-       "                <a href=\"#\" class=\"dropbtn\">Index</a>\n",
+       "                <span class=\"dropbtn\">Index</span>\n",
        "                <div class=\"dropdown-content\">\n",
        "                    <a href=\"#\" onclick=\"switchPage('addIndexPage')\">Add New Index</a>\n",
        "                    <a href=\"#\" onclick=\"switchPage('editIndexPage')\">Edit Index</a>\n",
@@ -267,7 +275,7 @@
        "            <a href=\"#\" onclick=\"switchPage('statisticsPage')\">Statistics</a>\n",
        "            <span class=\"theme-toggle\" onclick=\"toggleTheme()\">Toggle Theme</span>\n",
        "        </div>\n",
-       "</div>\n",
+       "    </div>\n",
        "\n",
        "<div id=\"searchPage\" class=\"search-container active\">\n",
        "    <input type=\"text\" id=\"searchQuery\" class=\"search-box\" placeholder=\"Search Nvidia products, news, or information...\">\n",
@@ -412,7 +420,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +453,7 @@
     "    </script>\n",
     "    <style>\n",
     "        :root {\n",
-    "            --background-color: #f4f4f4;\n",
+    "            --background-color: #e6e6e6; /* Slightly less bright */\n",
     "            --text-color: #333;\n",
     "            --navbar-background-color: #333;\n",
     "            --navbar-text-color: #fff;\n",
@@ -454,6 +462,8 @@
     "            --container-background-color: #fff;\n",
     "            --link-color: #0000EE;\n",
     "            --border-color: #ddd;\n",
+    "            --dropdown-background-color: #f9f9f9;\n",
+    "            --dropdown-text-color: #333;\n",
     "        }\n",
     "        .dark-theme {\n",
     "            --background-color: #121212;\n",
@@ -465,6 +475,8 @@
     "            --container-background-color: #333;\n",
     "            --link-color: #BB86FC;\n",
     "            --border-color: #333;\n",
+    "            --dropdown-background-color: #2c2c2c;\n",
+    "            --dropdown-text-color: #ccc;\n",
     "        }\n",
     "        body {\n",
     "            font-family: Arial, sans-serif;\n",
@@ -480,7 +492,7 @@
     "        }\n",
     "        .wrapper {\n",
     "            width: 100%;\n",
-    "            max-width: 1200px; /* Adjust this value to match your design preference */\n",
+    "            max-width: 1200px;\n",
     "            margin: auto;\n",
     "            padding: 20px;\n",
     "        }\n",
@@ -489,14 +501,14 @@
     "            padding: 20px;\n",
     "            border-radius: 10px;\n",
     "            box-shadow: 0 4px 8px rgba(0,0,0,0.1);\n",
-    "            margin-bottom: 20px; /* Ensure some space between the sections */\n",
+    "            margin-bottom: 20px;\n",
     "        }\n",
     "        .navbar {\n",
     "            display: flex;\n",
     "            justify-content: space-between;\n",
     "            background-color: var(--navbar-background-color);\n",
     "            color: var(--navbar-text-color);\n",
-    "            padding: 10px 50px; /* Adjust padding as needed */\n",
+    "            padding: 10px 50px;\n",
     "        }\n",
     "        .navbar .logo i {\n",
     "            margin-right: 10px;\n",
@@ -580,24 +592,28 @@
     "        .dropdown-content {\n",
     "            display: none;\n",
     "            position: absolute;\n",
-    "            background-color: #f9f9f9;\n",
+    "            background-color: var(--dropdown-background-color);\n",
     "            min-width: 160px;\n",
     "            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);\n",
-    "            padding: 12px 16px;\n",
     "            z-index: 1;\n",
-    "        }\n",
-    "        .dropdown:hover .dropdown-content {\n",
-    "            display: block;\n",
+    "            border-radius: 5px;\n",
     "        }\n",
     "        .dropdown-content a {\n",
-    "            color: black;\n",
+    "            color: var(--dropdown-text-color);\n",
     "            padding: 12px 16px;\n",
     "            text-decoration: none;\n",
     "            display: block;\n",
+    "            border-bottom: 1px solid var(--border-color);\n",
     "        }\n",
-    "        .dropdown-content a:hover {background-color: #f1f1f1}\n",
-    "        .dropdown:hover .dropbtn {\n",
-    "            background-color: #3e8e41;\n",
+    "        .dropdown-content a:last-child {\n",
+    "            border-bottom: none;\n",
+    "        }\n",
+    "        .dropdown-content a:hover {\n",
+    "            background-color: var(--button-background-color);\n",
+    "            color: var(--button-text-color);\n",
+    "        }\n",
+    "        .dropdown:hover .dropdown-content {\n",
+    "            display: block;\n",
     "        }\n",
     "        /*End of dropdown*/\n",
     "        \n",
@@ -662,15 +678,15 @@
     "</head>\n",
     "<body class=\"light-theme\">\n",
     "<div class=\"wrapper\">\n",
-    "<div class=\"navbar\">\n",
-    "    <div class=\"logo\">\n",
-    "        <i class=\"fas fa-microchip\"></i>\n",
-    "        <span>Nvidia Search Engine</span>\n",
-    "    </div>\n",
-    "    <div class=\"nav-links\">\n",
+    "    <div class=\"navbar\">\n",
+    "        <div class=\"logo\">\n",
+    "            <i class=\"fas fa-microchip\"></i>\n",
+    "            <span>Nvidia Search Engine</span>\n",
+    "        </div>\n",
+    "        <div class=\"nav-links\">\n",
     "            <a href=\"#\" onclick=\"switchPage('searchPage')\">Search</a>\n",
     "            <div class=\"dropdown\">\n",
-    "                <a href=\"#\" class=\"dropbtn\">Index</a>\n",
+    "                <span class=\"dropbtn\">Index</span>\n",
     "                <div class=\"dropdown-content\">\n",
     "                    <a href=\"#\" onclick=\"switchPage('addIndexPage')\">Add New Index</a>\n",
     "                    <a href=\"#\" onclick=\"switchPage('editIndexPage')\">Edit Index</a>\n",
@@ -679,7 +695,7 @@
     "            <a href=\"#\" onclick=\"switchPage('statisticsPage')\">Statistics</a>\n",
     "            <span class=\"theme-toggle\" onclick=\"toggleTheme()\">Toggle Theme</span>\n",
     "        </div>\n",
-    "</div>\n",
+    "    </div>\n",
     "\n",
     "<div id=\"searchPage\" class=\"search-container active\">\n",
     "    <input type=\"text\" id=\"searchQuery\" class=\"search-box\" placeholder=\"Search Nvidia products, news, or information...\">\n",
