--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +164,42 @@
        "            color: var(--text-color);\n",
        "        }\n",
        "        \n",
+       "        \n",
+       "        .navbar .nav-links a, .navbar .nav-links .dropbtn, .theme-toggle {\n",
+       "            color: var(--navbar-text-color);\n",
+       "            text-decoration: none;\n",
+       "            margin-left: 30px; /* Increased space between each item */\n",
+       "            font-weight: bold; /* Make text bold */\n",
+       "            cursor: pointer;\n",
+       "            position: relative;\n",
+       "            transition: color 0.3s ease;\n",
+       "        }\n",
+       "        \n",
+       "        /* Cool animation effect for hover */\n",
+       "        .navbar .nav-links a::after, .navbar .nav-links .dropbtn::after, .theme-toggle::after {\n",
+       "            content: '';\n",
+       "            position: absolute;\n",
+       "            width: 0;\n",
+       "            height: 2px;\n",
+       "            display: block;\n",
+       "            margin-top: 5px;\n",
+       "            right: 0;\n",
+       "            background: var(--button-background-color);\n",
+       "            transition: width 0.3s ease;\n",
+       "            transition-duration: 0.3s;\n",
+       "            bottom: -5px;\n",
+       "        }\n",
+       "        \n",
+       "        .navbar .nav-links a:hover::after, .navbar .nav-links .dropbtn:hover::after, .theme-toggle:hover::after {\n",
+       "            width: 100%;\n",
+       "            left: 0;\n",
+       "            background: var(--button-background-color);\n",
+       "        }\n",
+       "        \n",
+       "        .navbar .nav-links a:hover, .navbar .nav-links .dropbtn:hover, .theme-toggle:hover {\n",
+       "            color: var(--button-background-color);\n",
+       "        }\n",
+       "        \n",
        "        /* Additional styles for dropdown */\n",
        "        .dropdown {\n",
        "            position: relative;\n",
@@ -175,6 +211,7 @@
        "            background-color: var(--dropdown-background-color);\n",
        "            min-width: 160px;\n",
        "            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);\n",
+       "            padding: 12px 16px;\n",
        "            z-index: 1;\n",
        "            border-radius: 5px;\n",
        "        }\n",
@@ -183,7 +220,7 @@
        "            padding: 12px 16px;\n",
        "            text-decoration: none;\n",
        "            display: block;\n",
-       "            border-bottom: 1px solid var(--border-color);\n",
+       "            transition: background-color 0.2s ease-in-out;\n",
        "        }\n",
        "        .dropdown-content a:last-child {\n",
        "            border-bottom: none;\n",
@@ -420,7 +457,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,6 +621,42 @@
     "            color: var(--text-color);\n",
     "        }\n",
     "        \n",
+    "        \n",
+    "        .navbar .nav-links a, .navbar .nav-links .dropbtn, .theme-toggle {\n",
+    "            color: var(--navbar-text-color);\n",
+    "            text-decoration: none;\n",
+    "            margin-left: 30px; /* Increased space between each item */\n",
+    "            font-weight: bold; /* Make text bold */\n",
+    "            cursor: pointer;\n",
+    "            position: relative;\n",
+    "            transition: color 0.3s ease;\n",
+    "        }\n",
+    "        \n",
+    "        /* Cool animation effect for hover */\n",
+    "        .navbar .nav-links a::after, .navbar .nav-links .dropbtn::after, .theme-toggle::after {\n",
+    "            content: '';\n",
+    "            position: absolute;\n",
+    "            width: 0;\n",
+    "            height: 2px;\n",
+    "            display: block;\n",
+    "            margin-top: 5px;\n",
+    "            right: 0;\n",
+    "            background: var(--button-background-color);\n",
+    "            transition: width 0.3s ease;\n",
+    "            transition-duration: 0.3s;\n",
+    "            bottom: -5px;\n",
+    "        }\n",
+    "        \n",
+    "        .navbar .nav-links a:hover::after, .navbar .nav-links .dropbtn:hover::after, .theme-toggle:hover::after {\n",
+    "            width: 100%;\n",
+    "            left: 0;\n",
+    "            background: var(--button-background-color);\n",
+    "        }\n",
+    "        \n",
+    "        .navbar .nav-links a:hover, .navbar .nav-links .dropbtn:hover, .theme-toggle:hover {\n",
+    "            color: var(--button-background-color);\n",
+    "        }\n",
+    "        \n",
     "        /* Additional styles for dropdown */\n",
     "        .dropdown {\n",
     "            position: relative;\n",
@@ -595,6 +668,7 @@
     "            background-color: var(--dropdown-background-color);\n",
     "            min-width: 160px;\n",
     "            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);\n",
+    "            padding: 12px 16px;\n",
     "            z-index: 1;\n",
     "            border-radius: 5px;\n",
     "        }\n",
@@ -603,7 +677,7 @@
     "            padding: 12px 16px;\n",
     "            text-decoration: none;\n",
     "            display: block;\n",
-    "            border-bottom: 1px solid var(--border-color);\n",
+    "            transition: background-color 0.2s ease-in-out;\n",
     "        }\n",
     "        .dropdown-content a:last-child {\n",
     "            border-bottom: none;\n",
