--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -758,15 +758,15 @@
     "            <span>Nvidia Search Engine</span>\n",
     "        </div>\n",
     "        <div class=\"nav-links\">\n",
-    "            <a href=\"#\" onclick=\"switchPage('searchPage')\">Search</a>\n",
+    "            <a  onclick=\"switchPage('searchPage')\">Search</a>\n",
     "            <div class=\"dropdown\">\n",
     "                <span class=\"dropbtn\">Index</span>\n",
     "                <div class=\"dropdown-content\">\n",
-    "                    <a href=\"#\" onclick=\"switchPage('addIndexPage')\">Add New Index</a>\n",
-    "                    <a href=\"#\" onclick=\"switchPage('editIndexPage')\">Edit Index</a>\n",
+    "                    <a  onclick=\"switchPage('addIndexPage')\">Add New Index</a>\n",
+    "                    <a  onclick=\"switchPage('editIndexPage')\">Edit Index</a>\n",
     "                </div>\n",
     "            </div>\n",
-    "            <a href=\"#\" onclick=\"switchPage('statisticsPage')\">Statistics</a>\n",
+    "            <a  onclick=\"switchPage('statisticsPage')\">Statistics</a>\n",
     "            <span class=\"theme-toggle\" onclick=\"toggleTheme()\">Toggle Theme</span>\n",
     "        </div>\n",
     "    </div>\n",
