adding footer fix

--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -774,10 +774,10 @@
     "            background-color: #5a8e00;\n",
     "        }\n",
     "\n",
-    "        .copyright,\n",
-    "        .nice-things {\n",
+    "        .copyright {\n",
+    "            text-align: left; /* Align the copyright text to the left */\n",
     "            flex-grow: 1;\n",
-    "            text-align: center;\n",
+    "            margin-right: 20px; /* Add some margin to separate it from the buttons */\n",
     "        }\n",
     "        \n",
     "    </style>\n",
@@ -838,15 +838,12 @@
     "\n",
     "    <!-- Footer -->\n",
     "    <div class=\"footer\">\n",
+    "        <div class=\"copyright\">\n",
+    "            <br>&copy; Braude's Nvidia Search Engine. All rights reserved.</p>\n",
+    "        </div>\n",
     "        <div class=\"footer-options\">\n",
     "            <button onclick=\"changeFontSize('increase')\">Increase Font Size</button>\n",
     "            <button onclick=\"changeFontSize('decrease')\">Decrease Font Size</button>\n",
-    "        </div>\n",
-    "        <div class=\"copyright\">\n",
-    "            <br>&copy; Braude's Nvidia Search Engine</br>All rights reserved</p>\n",
-    "        </div>\n",
-    "        <div class=\"nice-things\">\n",
-    "            <p>Thanks for visiting! Have a great day!</p>\n",
     "        </div>\n",
     "    </div>\n",
     "</div>\n",
