added animations and more spigel to the innerHTML in the search page

--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,6 +94,20 @@
        "            margin-right: 10px;\n",
        "            color: var(--button-background-color);\n",
        "        }\n",
+       "        /* Logo rotation on hover */\n",
+       "        .logo i:hover {\n",
+       "    animation: rotateLogoHover 1s ease-in-out forwards;\n",
+       "}\n",
+       "\n",
+       "@keyframes rotateLogoHover {\n",
+       "    from {\n",
+       "        transform: rotate(0deg);\n",
+       "    }\n",
+       "    to {\n",
+       "        transform: rotate(360deg);\n",
+       "    }\n",
+       "}\n",
+       "\n",
        "        .navbar .nav-links a, .theme-toggle {\n",
        "            color: var(--navbar-text-color);\n",
        "            text-decoration: none;\n",
@@ -128,6 +142,8 @@
        "            border-radius: 5px;\n",
        "            cursor: pointer;\n",
        "            transition: background-color 0.3s ease;\n",
+       "            transform: scale(0.98);\n",
+       "\n",
        "        }\n",
        "        .search-button:hover, .btn:hover {\n",
        "            background-color: #5a8e00;\n",
@@ -301,15 +317,15 @@
        "            <span>Nvidia Search Engine</span>\n",
        "        </div>\n",
        "        <div class=\"nav-links\">\n",
-       "            <a href=\"#\" onclick=\"switchPage('searchPage')\">Search</a>\n",
+       "            <a  onclick=\"switchPage('searchPage')\">Search</a>\n",
        "            <div class=\"dropdown\">\n",
        "                <span class=\"dropbtn\">Index</span>\n",
        "                <div class=\"dropdown-content\">\n",
-       "                    <a href=\"#\" onclick=\"switchPage('addIndexPage')\">Add New Index</a>\n",
-       "                    <a href=\"#\" onclick=\"switchPage('editIndexPage')\">Edit Index</a>\n",
+       "                    <a  onclick=\"switchPage('addIndexPage')\">Add New Index</a>\n",
+       "                    <a  onclick=\"switchPage('editIndexPage')\">Edit Index</a>\n",
        "                </div>\n",
        "            </div>\n",
-       "            <a href=\"#\" onclick=\"switchPage('statisticsPage')\">Statistics</a>\n",
+       "            <a  onclick=\"switchPage('statisticsPage')\">Statistics</a>\n",
        "            <span class=\"theme-toggle\" onclick=\"toggleTheme()\">Toggle Theme</span>\n",
        "        </div>\n",
        "    </div>\n",
@@ -457,7 +473,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,6 +567,20 @@
     "            margin-right: 10px;\n",
     "            color: var(--button-background-color);\n",
     "        }\n",
+    "        /* Logo rotation on hover */\n",
+    "        .logo i:hover {\n",
+    "            animation: rotateLogoHover 1s ease-in-out forwards;\n",
+    "        }\n",
+    "\n",
+    "        @keyframes rotateLogoHover {\n",
+    "            from {\n",
+    "                transform: rotate(0deg);\n",
+    "            }\n",
+    "            to {\n",
+    "                transform: rotate(360deg);\n",
+    "            }\n",
+    "        }\n",
+    "\n",
     "        .navbar .nav-links a, .theme-toggle {\n",
     "            color: var(--navbar-text-color);\n",
     "            text-decoration: none;\n",
@@ -585,6 +615,8 @@
     "            border-radius: 5px;\n",
     "            cursor: pointer;\n",
     "            transition: background-color 0.3s ease;\n",
+    "            transform: scale(0.98);\n",
+    "\n",
     "        }\n",
     "        .search-button:hover, .btn:hover {\n",
     "            background-color: #5a8e00;\n",
@@ -911,7 +943,7 @@
     "</html>\n",
     "\"\"\"\n",
     "\n",
-    "HTML(html_code)\n"
+    "HTML(html_code)"
    ]
   }
  ],
