--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -672,8 +672,14 @@
     "            z-index: 1;\n",
     "            border-radius: 5px;\n",
     "        }\n",
+    "        :root .dropdown-content a {\n",
+    "            color: black; /* Set the default color for light mode */\n",
+    "        }\n",
+    "\n",
+    "        .dark-theme .dropdown-content a {\n",
+    "            color: white; /* Set the color for dark mode */\n",
+    "        }\n",
     "        .dropdown-content a {\n",
-    "            color: var(--dropdown-text-color);\n",
     "            padding: 12px 16px;\n",
     "            text-decoration: none;\n",
     "            display: block;\n",
