--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -355,23 +355,11 @@
        "    <div id=\"editIndexPage\" class=\"container\">\n",
        "        <h2>Edit Index</h2>\n",
        "        <div class=\"form-container\">\n",
-       "            <input type=\"text\" id=\"editTerm\" class=\"input-field\" placeholder=\"New term\">\n",
+       "            <input type=\"text\" id=\"editTerm\" class=\"input-field\" placeholder=\"Existing term\">\n",
        "            <input type=\"text\" id=\"editdocIds\" class=\"input-field\" placeholder=\"DocIDs (comma-separated)\">\n",
-       "            <button class=\"btn\" onclick=\"editTerm()\">Add Term</button>\n",
+       "            <button class=\"btn\" onclick=\"editTerm()\">Edit Term</button>\n",
        "        </div>\n",
-       "        <table id=\"termsTable\">\n",
-       "            <thead>\n",
-       "                <tr>\n",
-       "                    <th>Term</th>\n",
-       "                    <th>DocIDs</th>\n",
-       "                    <th>Links</th>\n",
-       "                    <th>Actions</th>\n",
-       "                </tr>\n",
-       "            </thead>\n",
-       "            <tbody>\n",
-       "                <!-- Dynamically filled with JavaScript -->\n",
-       "            </tbody>\n",
-       "        </table>\n",
+       "        <h2 id=\"editMessage\"> </h2>\n",
        "    </div>\n",
        "\n",
        "    <div id=\"addIndexPage\" class=\"container\">\n",
@@ -489,9 +477,24 @@
        "        actionsCell.appendChild(deleteBtn);\n",
        "    }\n",
        "\n",
-       "    function editTerm(term) {\n",
-       "        console.log(`Editing term: ${term}`);\n",
-       "        // Here you would populate the form with the term's details for editing\n",
+       "    function editTerm() {\n",
+       "        const term = document.getElementById('editTerm').value;\n",
+       "        const docIds = document.getElementById('editdocIds').value;\n",
+       "        let message = document.getElementById('editMessage');\n",
+       "        console.log(term);\n",
+       "        console.log(docIds);\n",
+       "        if (!fakeDatabase[term]) {\n",
+       "            message.innerHTML = `Term ${term} does not exist`;\n",
+       "            message.style.color = \"red\";\n",
+       "        }\n",
+       "        else {\n",
+       "        fakeDatabase[term] = docIds.split(',').map(link => link.trim());\n",
+       "        message.innerHTML = `Term ${term} updated successfully`;\n",
+       "        message.style.color = \"green\";\n",
+       "        }\n",
+       "\n",
+       "        // For demonstration, just reload the terms table\n",
+       "        // loadTerms();\n",
        "    }\n",
        "\n",
        "    function deleteTerm(term) {\n",
@@ -523,7 +526,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,23 +881,11 @@
     "    <div id=\"editIndexPage\" class=\"container\">\n",
     "        <h2>Edit Index</h2>\n",
     "        <div class=\"form-container\">\n",
-    "            <input type=\"text\" id=\"editTerm\" class=\"input-field\" placeholder=\"New term\">\n",
+    "            <input type=\"text\" id=\"editTerm\" class=\"input-field\" placeholder=\"Existing term\">\n",
     "            <input type=\"text\" id=\"editdocIds\" class=\"input-field\" placeholder=\"DocIDs (comma-separated)\">\n",
-    "            <button class=\"btn\" onclick=\"editTerm()\">Add Term</button>\n",
+    "            <button class=\"btn\" onclick=\"editTerm()\">Edit Term</button>\n",
     "        </div>\n",
-    "        <table id=\"termsTable\">\n",
-    "            <thead>\n",
-    "                <tr>\n",
-    "                    <th>Term</th>\n",
-    "                    <th>DocIDs</th>\n",
-    "                    <th>Links</th>\n",
-    "                    <th>Actions</th>\n",
-    "                </tr>\n",
-    "            </thead>\n",
-    "            <tbody>\n",
-    "                <!-- Dynamically filled with JavaScript -->\n",
-    "            </tbody>\n",
-    "        </table>\n",
+    "        <h2 id=\"editMessage\"> </h2>\n",
     "    </div>\n",
     "\n",
     "    <div id=\"addIndexPage\" class=\"container\">\n",
@@ -1012,9 +1003,24 @@
     "        actionsCell.appendChild(deleteBtn);\n",
     "    }\n",
     "\n",
-    "    function editTerm(term) {\n",
-    "        console.log(`Editing term: ${term}`);\n",
-    "        // Here you would populate the form with the term's details for editing\n",
+    "    function editTerm() {\n",
+    "        const term = document.getElementById('editTerm').value;\n",
+    "        const docIds = document.getElementById('editdocIds').value;\n",
+    "        let message = document.getElementById('editMessage');\n",
+    "        console.log(term);\n",
+    "        console.log(docIds);\n",
+    "        if (!fakeDatabase[term]) {\n",
+    "            message.innerHTML = `Term ${term} does not exist`;\n",
+    "            message.style.color = \"red\";\n",
+    "        }\n",
+    "        else {\n",
+    "        fakeDatabase[term] = docIds.split(',').map(link => link.trim());\n",
+    "        message.innerHTML = `Term ${term} updated successfully`;\n",
+    "        message.style.color = \"green\";\n",
+    "        }\n",
+    "\n",
+    "        // For demonstration, just reload the terms table\n",
+    "        // loadTerms();\n",
     "    }\n",
     "\n",
     "    function deleteTerm(term) {\n",
@@ -1063,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
