with stats page

--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -215,8 +215,14 @@
        "            z-index: 1;\n",
        "            border-radius: 5px;\n",
        "        }\n",
+       "        :root .dropdown-content a {\n",
+       "            color: black; /* Set the default color for light mode */\n",
+       "        }\n",
+       "\n",
+       "        .dark-theme .dropdown-content a {\n",
+       "            color: white; /* Set the color for dark mode */\n",
+       "        }\n",
        "        .dropdown-content a {\n",
-       "            color: var(--dropdown-text-color);\n",
        "            padding: 12px 16px;\n",
        "            text-decoration: none;\n",
        "            display: block;\n",
@@ -226,7 +232,6 @@
        "            border-bottom: none;\n",
        "        }\n",
        "        .dropdown-content a:hover {\n",
-       "            background-color: var(--button-background-color);\n",
        "            color: var(--button-text-color);\n",
        "        }\n",
        "        .dropdown:hover .dropdown-content {\n",
@@ -302,7 +307,6 @@
        "            border-radius: 10px;\n",
        "            margin-top: 64px; /* Additional margin at the top */\n",
        "        }\n",
-       "\n",
        "        .footer-options button {\n",
        "            background-color: var(--button-background-color);\n",
        "            color: var(--button-text-color);\n",
@@ -312,17 +316,46 @@
        "            cursor: pointer;\n",
        "            transition: background-color 0.3s ease;\n",
        "        }\n",
-       "\n",
        "        .footer-options button:hover {\n",
        "            background-color: #5a8e00;\n",
        "        }\n",
-       "\n",
        "        .copyright {\n",
        "            text-align: left; /* Align the copyright text to the left */\n",
        "            flex-grow: 1;\n",
        "            margin-right: 20px; /* Add some margin to separate it from the buttons */\n",
        "        }\n",
-       "        \n",
+       "\n",
+       "        .stats-list {\n",
+       "            display: flex;\n",
+       "            flex-direction: column;\n",
+       "            align-items: center;\n",
+       "            padding: 20px;\n",
+       "            background-color: var(--container-background-color);\n",
+       "            border-radius: 10px;\n",
+       "            box-shadow: 0 4px 8px rgba(0,0,0,0.1);\n",
+       "            margin-top: 20px;\n",
+       "        }\n",
+       "        .stats-list p {\n",
+       "            font-weight: bold;\n",
+       "            font-size: 1.1rem;\n",
+       "            margin: 10px 0;\n",
+       "            padding: 10px;\n",
+       "            border-radius: 5px;\n",
+       "            width: 80%;\n",
+       "            text-align: center;\n",
+       "            background-color: var(--background-color);\n",
+       "            color: var(--text-color);\n",
+       "            box-shadow: 0 2px 4px rgba(0,0,0,0.05);\n",
+       "        }\n",
+       "        .stats-header {\n",
+       "            color: var(--text-color)\n",
+       "        }\n",
+       "        /* Enhance the visual cue for the term with the most links */\n",
+       "        #termMostLinks {\n",
+       "            font-weight: bold;\n",
+       "            background-color: var(--button-background-color);\n",
+       "            color: var(--container-background-color);\n",
+       "        }\n",
        "    </style>\n",
        "</head>\n",
        "<body class=\"light-theme\">\n",
@@ -374,7 +407,13 @@
        "    </div>\n",
        "\n",
        "    <div id=\"statisticsPage\" class=\"container\">\n",
-       "        <p>Statistics Page (Placeholder for displaying index stats)</p>\n",
+       "        <h2 class=\"stats-header\">Index Statistics</h2>\n",
+       "        <div class=\"stats-list\">\n",
+       "            <p id=\"totalTerms\">Total Terms: Calculating...</p>\n",
+       "            <p id=\"termMostLinks\">Term with Most Links: Calculating...</p>\n",
+       "            <p id=\"totalLinks\">Total Links: Calculating...</p>\n",
+       "            <p id=\"avgLinksPerTerm\">Average Links per Term: Calculating...</p>\n",
+       "        </div>\n",
        "    </div>\n",
        "\n",
        "    <!-- Footer -->\n",
@@ -427,11 +466,37 @@
        "        document.body.classList.toggle(\"light-theme\");\n",
        "    }\n",
        "\n",
+       "    function calcStats() {\n",
+       "        let totalTerms = Object.keys(fakeDatabase).length;\n",
+       "        let totalLinks = 0;\n",
+       "        let termWithMostLinks = '';\n",
+       "        let maxLinksCount = 0;\n",
+       "\n",
+       "        Object.keys(fakeDatabase).forEach(term => {\n",
+       "            const linksCount = fakeDatabase[term].length;\n",
+       "            totalLinks += linksCount;\n",
+       "            if (linksCount > maxLinksCount) {\n",
+       "                maxLinksCount = linksCount;\n",
+       "                termWithMostLinks = term;\n",
+       "            }\n",
+       "        });\n",
+       "\n",
+       "        let avgLinksPerTerm = totalLinks / totalTerms;\n",
+       "\n",
+       "        document.getElementById('totalTerms').textContent = `Total Terms: ${totalTerms}`;\n",
+       "        document.getElementById('termMostLinks').textContent = `Term with Most Links: ${termWithMostLinks} (${maxLinksCount} links)`;\n",
+       "        document.getElementById('totalLinks').textContent = `Total Links: ${totalLinks}`;\n",
+       "        document.getElementById('avgLinksPerTerm').textContent = `Average Links per Term: ${avgLinksPerTerm.toFixed(2)}`;\n",
+       "    }\n",
+       "\n",
        "    function switchPage(pageId) {\n",
        "        document.querySelectorAll('.container, .search-container').forEach(function(page) {\n",
        "            page.classList.remove('active');\n",
        "        });\n",
        "        document.getElementById(pageId).classList.add('active');\n",
+       "        if (pageId === 'statisticsPage') {\n",
+       "            calcStats();\n",
+       "        }\n",
        "    }\n",
        "\n",
        "    switchPage('searchPage');\n",
@@ -526,7 +591,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +898,6 @@
     "            border-radius: 10px;\n",
     "            margin-top: 64px; /* Additional margin at the top */\n",
     "        }\n",
-    "\n",
     "        .footer-options button {\n",
     "            background-color: var(--button-background-color);\n",
     "            color: var(--button-text-color);\n",
@@ -843,17 +907,46 @@
     "            cursor: pointer;\n",
     "            transition: background-color 0.3s ease;\n",
     "        }\n",
-    "\n",
     "        .footer-options button:hover {\n",
     "            background-color: #5a8e00;\n",
     "        }\n",
-    "\n",
     "        .copyright {\n",
     "            text-align: left; /* Align the copyright text to the left */\n",
     "            flex-grow: 1;\n",
     "            margin-right: 20px; /* Add some margin to separate it from the buttons */\n",
     "        }\n",
-    "        \n",
+    "\n",
+    "        .stats-list {\n",
+    "            display: flex;\n",
+    "            flex-direction: column;\n",
+    "            align-items: center;\n",
+    "            padding: 20px;\n",
+    "            background-color: var(--container-background-color);\n",
+    "            border-radius: 10px;\n",
+    "            box-shadow: 0 4px 8px rgba(0,0,0,0.1);\n",
+    "            margin-top: 20px;\n",
+    "        }\n",
+    "        .stats-list p {\n",
+    "            font-weight: bold;\n",
+    "            font-size: 1.1rem;\n",
+    "            margin: 10px 0;\n",
+    "            padding: 10px;\n",
+    "            border-radius: 5px;\n",
+    "            width: 80%;\n",
+    "            text-align: center;\n",
+    "            background-color: var(--background-color);\n",
+    "            color: var(--text-color);\n",
+    "            box-shadow: 0 2px 4px rgba(0,0,0,0.05);\n",
+    "        }\n",
+    "        .stats-header {\n",
+    "            color: var(--text-color)\n",
+    "        }\n",
+    "        /* Enhance the visual cue for the term with the most links */\n",
+    "        #termMostLinks {\n",
+    "            font-weight: bold;\n",
+    "            background-color: var(--button-background-color);\n",
+    "            color: var(--container-background-color);\n",
+    "        }\n",
     "    </style>\n",
     "</head>\n",
     "<body class=\"light-theme\">\n",
@@ -905,7 +998,13 @@
     "    </div>\n",
     "\n",
     "    <div id=\"statisticsPage\" class=\"container\">\n",
-    "        <p>Statistics Page (Placeholder for displaying index stats)</p>\n",
+    "        <h2 class=\"stats-header\">Index Statistics</h2>\n",
+    "        <div class=\"stats-list\">\n",
+    "            <p id=\"totalTerms\">Total Terms: Calculating...</p>\n",
+    "            <p id=\"termMostLinks\">Term with Most Links: Calculating...</p>\n",
+    "            <p id=\"totalLinks\">Total Links: Calculating...</p>\n",
+    "            <p id=\"avgLinksPerTerm\">Average Links per Term: Calculating...</p>\n",
+    "        </div>\n",
     "    </div>\n",
     "\n",
     "    <!-- Footer -->\n",
@@ -958,11 +1057,37 @@
     "        document.body.classList.toggle(\"light-theme\");\n",
     "    }\n",
     "\n",
+    "    function calcStats() {\n",
+    "        let totalTerms = Object.keys(fakeDatabase).length;\n",
+    "        let totalLinks = 0;\n",
+    "        let termWithMostLinks = '';\n",
+    "        let maxLinksCount = 0;\n",
+    "\n",
+    "        Object.keys(fakeDatabase).forEach(term => {\n",
+    "            const linksCount = fakeDatabase[term].length;\n",
+    "            totalLinks += linksCount;\n",
+    "            if (linksCount > maxLinksCount) {\n",
+    "                maxLinksCount = linksCount;\n",
+    "                termWithMostLinks = term;\n",
+    "            }\n",
+    "        });\n",
+    "\n",
+    "        let avgLinksPerTerm = totalLinks / totalTerms;\n",
+    "\n",
+    "        document.getElementById('totalTerms').textContent = `Total Terms: ${totalTerms}`;\n",
+    "        document.getElementById('termMostLinks').textContent = `Term with Most Links: ${termWithMostLinks} (${maxLinksCount} links)`;\n",
+    "        document.getElementById('totalLinks').textContent = `Total Links: ${totalLinks}`;\n",
+    "        document.getElementById('avgLinksPerTerm').textContent = `Average Links per Term: ${avgLinksPerTerm.toFixed(2)}`;\n",
+    "    }\n",
+    "\n",
     "    function switchPage(pageId) {\n",
     "        document.querySelectorAll('.container, .search-container').forEach(function(page) {\n",
     "            page.classList.remove('active');\n",
     "        });\n",
     "        document.getElementById(pageId).classList.add('active');\n",
+    "        if (pageId === 'statisticsPage') {\n",
+    "            calcStats();\n",
+    "        }\n",
     "    }\n",
     "\n",
     "    switchPage('searchPage');\n",
@@ -1074,7 +1199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
