fixed database and search function

--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -413,6 +413,7 @@
        "            <p id=\"termMostLinks\">Term with Most Links: Calculating...</p>\n",
        "            <p id=\"totalLinks\">Total Links: Calculating...</p>\n",
        "            <p id=\"avgLinksPerTerm\">Average Links per Term: Calculating...</p>\n",
+       "            <p id=\"avgApearPerLink\">Average Links per Term: Calculating...</p>\n",
        "        </div>\n",
        "    </div>\n",
        "\n",
@@ -430,11 +431,11 @@
        "\n",
        "<script>\n",
        "    fakeDatabase = {\n",
-       "        \"GPU\": [\"https://www.nvidia.com/en-us/geforce/graphics-cards/30-series/\", \"https://www.nvidia.com/en-us/geforce/\", \"https://www.nvidia.com/en-us/gpu-cloud/\"],\n",
-       "        \"AI\": [\"https://www.nvidia.com/en-us/deep-learning-ai/\", \"https://www.nvidia.com/en-us/omniverse/\"],\n",
-       "        \"Driver\": [\"https://www.nvidia.com/en-us/drivers/\", \"https://www.nvidia.com/Download/index.aspx\"],\n",
-       "        \"Technology\": [\"https://www.nvidia.com/en-us/\", \"https://www.nvidia.com/en-us/technologies/\", \"https://www.nvidia.com/en-us/industries/\"],\n",
-       "        \"RTX\": [\"https://www.nvidia.com/en-us/geforce/rtx/\"]\n",
+       "        \"GPU\": {\"https://www.nvidia.com/en-us/geforce/graphics-cards/30-series/\": 153, \"https://www.nvidia.com/en-us/geforce/\": 77, \"https://www.nvidia.com/en-us/gpu-cloud/\": 34},\n",
+       "        \"AI\": {\"https://www.nvidia.com/en-us/deep-learning-ai/\": 461, \"https://www.nvidia.com/en-us/omniverse/\": 106},\n",
+       "        \"Driver\": {\"https://www.nvidia.com/en-us/drivers/\": 181, \"https://www.nvidia.com/Download/index.aspx\": 34},\n",
+       "        \"Technology\": {\"https://www.nvidia.com/en-us/\": 78, \"https://www.nvidia.com/en-us/technologies/\": 16, \"https://www.nvidia.com/en-us/industries/\": 4},\n",
+       "        \"RTX\": {\"https://www.nvidia.com/en-us/geforce/rtx/\": 46}\n",
        "    };\n",
        "\n",
        "    function search() {\n",
@@ -446,11 +447,11 @@
        "        Object.keys(fakeDatabase).forEach((term) => {\n",
        "            if (term.toLowerCase().includes(query)) {\n",
        "                foundResults = true;\n",
-       "                fakeDatabase[term].forEach((link) => {\n",
+       "                Object.entries(fakeDatabase[term]).forEach(([link, count]) => {\n",
        "                    const linkElement = document.createElement('a');\n",
        "                    linkElement.href = link;\n",
        "                    linkElement.target = \"_blank\";\n",
-       "                    linkElement.innerHTML = `<span class=\"result-title\">${term}:</span> ${link}`;\n",
+       "                    linkElement.innerHTML = `<span class=\"result-title\">${term} (Apearences: ${count}) :</span> ${link}`;\n",
        "                    resultsContainer.appendChild(linkElement);\n",
        "                });\n",
        "            }\n",
@@ -469,24 +470,34 @@
        "    function calcStats() {\n",
        "        let totalTerms = Object.keys(fakeDatabase).length;\n",
        "        let totalLinks = 0;\n",
-       "        let termWithMostLinks = '';\n",
-       "        let maxLinksCount = 0;\n",
+       "        let totalAppearances = 0;\n",
+       "        let termWithMostAppearances = '';\n",
+       "        let maxAppearances = 0;\n",
        "\n",
        "        Object.keys(fakeDatabase).forEach(term => {\n",
-       "            const linksCount = fakeDatabase[term].length;\n",
-       "            totalLinks += linksCount;\n",
-       "            if (linksCount > maxLinksCount) {\n",
-       "                maxLinksCount = linksCount;\n",
-       "                termWithMostLinks = term;\n",
-       "            }\n",
+       "            const links = Object.entries(fakeDatabase[term]);\n",
+       "            totalLinks += links.length;\n",
+       "            let termAppearances = 0;\n",
+       "            \n",
+       "            links.forEach(([link, count]) => {\n",
+       "                termAppearances += count;\n",
+       "                if (termAppearances > maxAppearances) {\n",
+       "                    maxAppearances = termAppearances;\n",
+       "                    termWithMostAppearances = term;\n",
+       "                }\n",
+       "            });\n",
+       "\n",
+       "            totalAppearances += termAppearances;\n",
        "        });\n",
        "\n",
-       "        let avgLinksPerTerm = totalLinks / totalTerms;\n",
+       "        let avgAppearancesPerTerm = totalAppearances / totalTerms;\n",
+       "        let avgAppearancesPerLink = totalAppearances / totalLinks;\n",
        "\n",
        "        document.getElementById('totalTerms').textContent = `Total Terms: ${totalTerms}`;\n",
-       "        document.getElementById('termMostLinks').textContent = `Term with Most Links: ${termWithMostLinks} (${maxLinksCount} links)`;\n",
+       "        document.getElementById('termMostLinks').textContent = `Term with Most Appearances: ${termWithMostAppearances} (${maxAppearances} appearances)`;\n",
        "        document.getElementById('totalLinks').textContent = `Total Links: ${totalLinks}`;\n",
-       "        document.getElementById('avgLinksPerTerm').textContent = `Average Links per Term: ${avgLinksPerTerm.toFixed(2)}`;\n",
+       "        document.getElementById('avgLinksPerTerm').textContent = `Average Appearances per Term: ${avgAppearancesPerTerm.toFixed(2)}`;\n",
+       "        document.getElementById('avgApearPerLink').textContent = `Average Appearances per Link: ${avgAppearancesPerLink.toFixed(2)}`;\n",
        "    }\n",
        "\n",
        "    function switchPage(pageId) {\n",
@@ -591,7 +602,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,6 +1015,7 @@
     "            <p id=\"termMostLinks\">Term with Most Links: Calculating...</p>\n",
     "            <p id=\"totalLinks\">Total Links: Calculating...</p>\n",
     "            <p id=\"avgLinksPerTerm\">Average Links per Term: Calculating...</p>\n",
+    "            <p id=\"avgApearPerLink\">Average Links per Term: Calculating...</p>\n",
     "        </div>\n",
     "    </div>\n",
     "\n",
@@ -1021,11 +1033,11 @@
     "\n",
     "<script>\n",
     "    fakeDatabase = {\n",
-    "        \"GPU\": [\"https://www.nvidia.com/en-us/geforce/graphics-cards/30-series/\", \"https://www.nvidia.com/en-us/geforce/\", \"https://www.nvidia.com/en-us/gpu-cloud/\"],\n",
-    "        \"AI\": [\"https://www.nvidia.com/en-us/deep-learning-ai/\", \"https://www.nvidia.com/en-us/omniverse/\"],\n",
-    "        \"Driver\": [\"https://www.nvidia.com/en-us/drivers/\", \"https://www.nvidia.com/Download/index.aspx\"],\n",
-    "        \"Technology\": [\"https://www.nvidia.com/en-us/\", \"https://www.nvidia.com/en-us/technologies/\", \"https://www.nvidia.com/en-us/industries/\"],\n",
-    "        \"RTX\": [\"https://www.nvidia.com/en-us/geforce/rtx/\"]\n",
+    "        \"GPU\": {\"https://www.nvidia.com/en-us/geforce/graphics-cards/30-series/\": 153, \"https://www.nvidia.com/en-us/geforce/\": 77, \"https://www.nvidia.com/en-us/gpu-cloud/\": 34},\n",
+    "        \"AI\": {\"https://www.nvidia.com/en-us/deep-learning-ai/\": 461, \"https://www.nvidia.com/en-us/omniverse/\": 106},\n",
+    "        \"Driver\": {\"https://www.nvidia.com/en-us/drivers/\": 181, \"https://www.nvidia.com/Download/index.aspx\": 34},\n",
+    "        \"Technology\": {\"https://www.nvidia.com/en-us/\": 78, \"https://www.nvidia.com/en-us/technologies/\": 16, \"https://www.nvidia.com/en-us/industries/\": 4},\n",
+    "        \"RTX\": {\"https://www.nvidia.com/en-us/geforce/rtx/\": 46}\n",
     "    };\n",
     "\n",
     "    function search() {\n",
@@ -1037,11 +1049,11 @@
     "        Object.keys(fakeDatabase).forEach((term) => {\n",
     "            if (term.toLowerCase().includes(query)) {\n",
     "                foundResults = true;\n",
-    "                fakeDatabase[term].forEach((link) => {\n",
+    "                Object.entries(fakeDatabase[term]).forEach(([link, count]) => {\n",
     "                    const linkElement = document.createElement('a');\n",
     "                    linkElement.href = link;\n",
     "                    linkElement.target = \"_blank\";\n",
-    "                    linkElement.innerHTML = `<span class=\"result-title\">${term}:</span> ${link}`;\n",
+    "                    linkElement.innerHTML = `<span class=\"result-title\">${term} (Apearences: ${count}) :</span> ${link}`;\n",
     "                    resultsContainer.appendChild(linkElement);\n",
     "                });\n",
     "            }\n",
@@ -1060,24 +1072,34 @@
     "    function calcStats() {\n",
     "        let totalTerms = Object.keys(fakeDatabase).length;\n",
     "        let totalLinks = 0;\n",
-    "        let termWithMostLinks = '';\n",
-    "        let maxLinksCount = 0;\n",
+    "        let totalAppearances = 0;\n",
+    "        let termWithMostAppearances = '';\n",
+    "        let maxAppearances = 0;\n",
     "\n",
     "        Object.keys(fakeDatabase).forEach(term => {\n",
-    "            const linksCount = fakeDatabase[term].length;\n",
-    "            totalLinks += linksCount;\n",
-    "            if (linksCount > maxLinksCount) {\n",
-    "                maxLinksCount = linksCount;\n",
-    "                termWithMostLinks = term;\n",
-    "            }\n",
+    "            const links = Object.entries(fakeDatabase[term]);\n",
+    "            totalLinks += links.length;\n",
+    "            let termAppearances = 0;\n",
+    "            \n",
+    "            links.forEach(([link, count]) => {\n",
+    "                termAppearances += count;\n",
+    "                if (termAppearances > maxAppearances) {\n",
+    "                    maxAppearances = termAppearances;\n",
+    "                    termWithMostAppearances = term;\n",
+    "                }\n",
+    "            });\n",
+    "\n",
+    "            totalAppearances += termAppearances;\n",
     "        });\n",
     "\n",
-    "        let avgLinksPerTerm = totalLinks / totalTerms;\n",
+    "        let avgAppearancesPerTerm = totalAppearances / totalTerms;\n",
+    "        let avgAppearancesPerLink = totalAppearances / totalLinks;\n",
     "\n",
     "        document.getElementById('totalTerms').textContent = `Total Terms: ${totalTerms}`;\n",
-    "        document.getElementById('termMostLinks').textContent = `Term with Most Links: ${termWithMostLinks} (${maxLinksCount} links)`;\n",
+    "        document.getElementById('termMostLinks').textContent = `Term with Most Appearances: ${termWithMostAppearances} (${maxAppearances} appearances)`;\n",
     "        document.getElementById('totalLinks').textContent = `Total Links: ${totalLinks}`;\n",
-    "        document.getElementById('avgLinksPerTerm').textContent = `Average Links per Term: ${avgLinksPerTerm.toFixed(2)}`;\n",
+    "        document.getElementById('avgLinksPerTerm').textContent = `Average Appearances per Term: ${avgAppearancesPerTerm.toFixed(2)}`;\n",
+    "        document.getElementById('avgApearPerLink').textContent = `Average Appearances per Link: ${avgAppearancesPerLink.toFixed(2)}`;\n",
     "    }\n",
     "\n",
     "    function switchPage(pageId) {\n",
