Navbar width update

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHuPADrwYrbQU2HSSPrIci",
+      "authorship_tag": "ABX9TyOj1wc0OliBCqioemrqRRlw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "mIk-LPykCRwE",
-        "outputId": "439956e8-d7fd-478d-b592-4b63560362ef"
+        "outputId": "e0bc2f31-45b3-4ceb-b456-b8120ce1aee5"
       },
       "outputs": [
         {
@@ -131,6 +131,7 @@
               "        background-color: var(--navbar-background-color);\n",
               "        color: var(--navbar-text-color);\n",
               "        padding: 10px 50px;\n",
+              "        width: 90.8%;\n",
               "      }\n",
               "      .navbar .logo i {\n",
               "        margin-right: 10px;\n",
@@ -468,7 +469,7 @@
               "      #pagination button:active {\n",
               "        transform: translateY(1px); /* Push effect */\n",
               "      }\n",
-              "      \n",
+              "\n",
               "\n",
               "      /* Adjusting the select dropdown to match the Nvidia theme */\n",
               "\n",
@@ -535,7 +536,7 @@
               "        </button>\n",
               "        <div id=\"searchResults\" class=\"search-results\"></div>\n",
               "\n",
-              "  \n",
+              "\n",
               "\n",
               "        <!-- Pagination Controls -->\n",
               "        <div id=\"pagination\"></div>\n",
@@ -862,7 +863,7 @@
               "        } else if (action === \"decrease\") {\n",
               "          body.style.fontSize = `${Math.max(currentSize - 2, 10)}px`;\n",
               "        }\n",
-              "        \n",
+              "\n",
               "      // Initially load terms when the page loads\n",
               "      window.onload = function () {\n",
               "        loadTerms();\n",
@@ -876,7 +877,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 5
         }
       ],
       "source": [
@@ -968,6 +969,7 @@
         "        background-color: var(--navbar-background-color);\n",
         "        color: var(--navbar-text-color);\n",
         "        padding: 10px 50px;\n",
+        "        width: 90.8%;\n",
         "      }\n",
         "      .navbar .logo i {\n",
         "        margin-right: 10px;\n",
