Changed width footer

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOj1wc0OliBCqioemrqRRlw",
+      "authorship_tag": "ABX9TyMzEZzV12MLIruBjM9gSnxc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "height": 1000
         },
         "id": "mIk-LPykCRwE",
-        "outputId": "e0bc2f31-45b3-4ceb-b456-b8120ce1aee5"
+        "outputId": "d71e32c8-90aa-41b1-e2c9-30313fd27e3b"
       },
       "outputs": [
         {
@@ -303,7 +303,7 @@
               "        border-bottom: none;\n",
               "      }\n",
               "      .dropdown-content a:hover {\n",
-              "        background-color: var(--button-background-color);\n",
+              "        //background-color: var(--button-background-color);\n",
               "        color: var(--button-text-color);\n",
               "      }\n",
               "      .dropdown:hover .dropdown-content {\n",
@@ -380,6 +380,7 @@
               "        align-items: center;\n",
               "        border-radius: 10px;\n",
               "        margin-top: 64px; /* Additional margin at the top */\n",
+              "        width:100%;\n",
               "      }\n",
               "      .footer-options button {\n",
               "        background-color: var(--button-background-color);\n",
@@ -1141,7 +1142,7 @@
         "        border-bottom: none;\n",
         "      }\n",
         "      .dropdown-content a:hover {\n",
-        "        background-color: var(--button-background-color);\n",
+        "        //background-color: var(--button-background-color);\n",
         "        color: var(--button-text-color);\n",
         "      }\n",
         "      .dropdown:hover .dropdown-content {\n",
@@ -1218,6 +1219,7 @@
         "        align-items: center;\n",
         "        border-radius: 10px;\n",
         "        margin-top: 64px; /* Additional margin at the top */\n",
+        "        width:100%;\n",
         "      }\n",
         "      .footer-options button {\n",
         "        background-color: var(--button-background-color);\n",
